# lora-hacks-ng

./: west.yml
app/: CMakeLists.txt  Kconfig  flipper_code.ld  mcuboot_signing.cmake  pm_static_bl54l15_breakout_nrf54l15_cpuapp_lora.yml  prj.conf  sysbuild.cmake  sysbuild.conf
app/boards/: bl54l15_breakout_nrf54l15_cpuapp_lora.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay
app/remote/: CMakeLists.txt  Kconfig  pm_static_bl54l15_breakout_nrf54l15_cpuflpr_lora_xip.yml  prj.conf
app/remote/boards/: bl54l15_breakout_nrf54l15_cpuflpr_lora.conf  bl54l15_breakout_nrf54l15_cpuflpr_lora.overlay  bl54l15_breakout_nrf54l15_cpuflpr_lora_xip.overlay  nrf54l15dk_nrf54l15_cpuflpr.overlay
app/remote/src/: main.c
app/src/: flipper_cpu.c  ipc_crypto.c  ipc_crypto.h  ipc_endpoint.c  ipc_endpoint.h  ipc_settings.c  ipc_settings.h  lorawan_nvm_settings.c  lorawan_nvm_settings.h  lorawan_nvm_settings_setting.c  main.c  main.ct  settings_ipc.c
crypto/aes_ecb/: prj.conf
crypto/aes_ecb/src/: main.c
crypto/cmac/: prj.conf
crypto/cmac/src/: main.c
gpio_test/: prj.conf
gpio_test/src/: main.c  mapping
sysbuild/: CMakeLists.txt  Kconfig.sysbuild
temp/: changes
zephyr/: module.yml
